[package]
name = "skototrope"
version = "0.1.0"
authors = ["Merlin"]
edition = "2021"

[dependencies]
dotenv = "0.15"
poise = "0.6.1"
serenity = { version = "0.12", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.42", features = ["macros", "signal", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
xcap = "0.0.14"
